# app/docs/swagger.yaml
@@ -369,6 +369,75 @@ paths:
       summary: Get a list of products
       tags:
       - Products
+  /products/{id}/like:
+    delete:
+      consumes:
+      - application/json
+      description: Increments the product's like count
+      parameters:
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Product disliked successfully
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Dislike a product by id
+      tags:
+      - Products
+    post:
+      consumes:
+      - application/json
+      description: Increments the product's like count
+      parameters:
+      - description: Product ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Product likeed successfully
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Like a product by slug
+      tags:
+      - Products
   /products/{slug}:
     get:
       consumes:
@@ -400,39 +469,6 @@ paths:
               type: string
             type: object
       summary: Get a product by slug
-      tags:
-      - Products
-  /products/{slug}/like:
-    get:
-      consumes:
-      - application/json
-      description: Increments the product's like count
-      parameters:
-      - description: Product slug
-        in: path
-        name: slug
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Product'
-        "400":
-          description: Bad request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Server error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Like a product by slug
       tags:
       - Products
 swagger: "2.0"
